index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');




body{
  background-image: url(Banner.png);
  color: #ffff;
  font-family: 'Montserrat', sans-serif;



}







.head{
  display: flex;
  justify-content: space-between;
}

.navbar{
  width: 60%;
  margin: 4% 6%;
}

.htxt{
  font-size: 1.2rem;
}

header h1{
  padding-left: 50%;
  padding-top: 12%


}

header ul{
  margin: 0;
  padding: 0;

}

header li{
  list-style: none;
  display: inline;
  padding: 0 0 0 5%;
  float:right;
}

header li a{
  text-decoration: none;
  color: #ecf1fb;

}

header li a:hover{
  color: #ffffff;
}

header a button{
  border-style: none;
  font-family: 'Montserrat', sans-serif;
  background-color: #ffffff;
  color: #000000;
  font-weight: bold;
  padding: 6% 30%;
  border-radius: 18px;
}

header a button:hover{
  opacity: 0.5;
}

header a button:focus{
  outline: none;
}

.mid{
  display:grid;
}
 .mtxt{
   flex:1;
   margin-left: 10%;
   font-size: 2rem;
   font-weight: bold;
   margin-right: 930px;
   margin-top: 0;
   grid-column: 1/2;
 }


.mtxt h1{
  margin-block-start:0;

}

 .toggle{
   display: none;
 }



/* effects */

 .hidden{
    opacity: 0;
    transition: opacity 0.7s ease-in-out;
 }
 .display{
   opacity: 0.99;
   transition: opacity 0.7s ease-in-out;
   z-index: 5000!important;
 }

/* chatbox */

.chatbox{
  grid-column: 2/3;
  position: absolute;
}

.chaton{
  position: fixed;
  padding: 12px 6px;
  margin: 2%;
  bottom: -2%;
  left: 86%;
  border:none;
  border-top-left-radius: 50px;
  border-top-right-radius: 50px;
  border-bottom-left-radius: 50px;
  border-bottom-right-radius:0;
  cursor: pointer;
  background-color: #ffffff;
  z-index: 500001!important;
  box-shadow: 0 0 50px 0 #888888 ;
}

.chaton:focus{
  outline: none;

}


.trig-on{
  width: 50%;
}


.chatcon{
  z-index: 1000;
  position: absolute;
  background-color: #ffffff;
  color: #000000;
  left:55%;
  bottom: 10%;
  right: 5.2%;
  border-radius: 10px;
  font-size: 0.6rem;
  font-weight:100;
  margin-left: 140px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}


.c-1{
  background-color: #7F8AC5;
  color: #ffffff;
  margin: 20px 20px 10px 20px;
  border-radius: 10px;
  padding: 10px 50px;
  z-index: 400;
}

.c-1 h2{
  opacity: 0.7;
}

.c-2{
  padding: 5px 30px 40px 70px;
}

.c-2 h2{
  opacity: 0.7;
}

.startcon{
  border: none;
  padding: 5% 8%;
  color: #ffffff;
  background-color: #13A884;
  border-radius: 30px;
  text-align: left;
  font-family: 'Montserrat', sans-serif;
  cursor: pointer;

}

.startcon i{
  padding-left: 5px;
}

.startcon:focus{
  outline: none;
}



.chatcon2{
  position: absolute;
  background-color: #ffffff;
  color: #000000;
  left:55%;
  bottom: 10.1%;
  right: 5.2%;
  border-radius: 10px;
  font-size: 0.6rem;
  font-weight:100;
  margin-left: 140px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  z-index: 500;
}

.c-1-1{
  background-color: #7F8AC5;
  color: #ffffff;
  margin: 20px 20px 10px 20px;
  border-radius: 10px;
  padding: 10px 50px;
}

.c-1-1 h2{
  opacity: 0.7;
}







.txtin{
  border: none;
  background-color: inherit;
  padding: 20px 100px 20px 65px;
  font-family: 'Montserrat', sans-serif;
}

.txtin:focus{
  outline: none;
}


.fsub{
  border: none;
  background-color: inherit;
  color: #7F8AC5;
  font-size: 1.2rem;
  cursor: pointer;
}

.fsub:focus{
  outline: none;
}


.bubcirc{
  padding: 10px;
  background-color: #4C5AA1;
  position: relative;
  top: 40px;
  left:20px;
  margin-right: 660px;
  border-radius: 10px;
}


.bubble {
  position: relative;
  margin-left: 50px;
  margin-right: 100px;
  background:#afb8c8 ;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  padding: 15px 16px;
  text-align: left;
  color: #ffffff;
  margin-bottom: 50px;
  font-size: 0.8rem;
}

.bubble-bottom-left:before {
  content: "";
  width: 0px;
  height: 0px;
  position: absolute;
  border-left: 24px solid #afb8c8;
  border-right: 12px solid transparent;
  border-top: 12px solid #afb8c8;
  border-bottom: 20px solid transparent;
  left: 0;
  bottom: -24px;


}


.bubble1 {
  position: relative;
  margin-left: 150px;
  margin-right: 20px;
  background: #4C5AA1 ;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-bottom-left-radius: 5px;
  padding: 15px 16px;
  text-align: left;
  color: #ffffff;
  margin-bottom: 50px;
  margin-top: 20px;
  font-size: 0.8rem;
}

.bubble-bottom-left1:before {
  content: "";
  width: 0px;
  height: 0px;
  position: absolute;
  border-right: 24px solid #4C5AA1;
  border-left: 12px solid transparent;
  border-top: 12px solid #4C5AA1;
  border-bottom: 20px solid transparent;

  left: 191px;
  bottom: -24px;


}



.bubfoot{
  display: inline-flex;
  border-bottom: solid;
  padding-right: 123px;
  border-bottom-width: thin;
  border-bottom-color: #afb8c8;
}

.bubfoot h4{
  margin-bottom: 0;
  padding-top: 17px;
}


.bubs img{
  padding-top: 30px;
  padding-left: 120px;
  padding-right: 10px;
  padding-bottom: 10px;
  width: 5%;
  align-items: center;
}





/* responsive-part */

@media (max-device-width: 420px) {
  body{
    background-image: none;
    background-color: #afb8c8;
    width: 123%;
  }
  .mtxt{
    margin-right: 10%;
    font-size: 4rem;
    margin-top: 20%;
    text-align: center;
  }
  .htxt{
    font-size: 2rem;
  }
  .navbar{
    display: none;
  }
  .toggle{
    display: inline-block;
    border: none;


  }

  header button{
    padding:  12px 50px;
    border-radius: 18px;
    margin: 65px 100px 0 0;
    height: 100px;
  }

  header button a{
    color: #7F8AC5;
  }

  header button:hover{
    opacity: 0.7;
  }


  .nav2{
    right: 0;
  }


  .nav2 nav{
    background-color: #d3dff2 ;
    padding: 20px 0 20px 0;


  }

  .nav2 ul{
    list-style: none;
    align-items: center;
    text-align: center;
    padding-left: 90px;
    padding-right: 10px;

  }

  .nav2 li{
    display: inline;
    padding: 0 20px 0 20px;
    align-items: center;

  }

  .nav2 li a{
    text-decoration: none;
    color: #7F8AC5 ;
    font-size: 40px;

  }

  .nav2 li a:hover{
    color: #ffffff;
  }

  .chaton{
    margin-left: 900px;
    width: 20%;
    margin-bottom: 0;
    border-top-left-radius: 80px;
    border-top-right-radius: 80px;
    border-bottom-left-radius: 80px;
    border-bottom-right-radius: 0;
    background-color: #ffffff;
  }

  .chatcon{
    width: 113%;
    position: absolute;
    left: 0px;
    font-size: 1.5rem;
    z-index: -1000;
    padding-top: 10px;
    margin-left: 5%;
    top: 65%;
    bottom: -2%;
  }


  .chatcon2{
    width: 95%;
    position: relative;
    left: 0px;
    font-size: 2rem;

    padding-top: 10px;
    margin-left: 2%;

  }

  .bubfoot {
    font-size: 1.5rem;
    padding-left: 21%;
    padding-right: 31%;
    padding-bottom: 1%;
  }

  .bubs img{
    height: 5%;
    width: 5%;
  }


  .bubfoot h4{
    padding-top: 0;
  }

  .txtin{
    font-size: 1.8rem;
    padding: 2% 30% 2% 15%;
  }


  .fsub{
    font-size: 3.5rem;
  }


  .bubble, .bubble1{
    font-size: 2rem;
  }


  .bubcirc{
    margin-right: 100%;

  }

  .c-1-1{
    margin-left: 3%;
    margin-right: 3%;
  }


  .bubs{
    padding: 2% 3%;
  }


  .startcon{
    font-size: 2rem;
  }




}

